--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@
 
     /*fonts*/
         /*font-size*/
+    --fs-smaller: 15px;
+    --fs-small: 18px;
     --fs-normal: 22px;
     --fs-big: 25px;
     --fs-biggest: 30px;
@@ -85,7 +87,7 @@
 }
 
 .paragraph{
-    font-size: var(--fs-big);
+    font-size: var(--fs-normal);
     font-weight: var(--fw-normal);
     line-height: 40px;
 }
@@ -95,7 +97,7 @@
 }
 
 .paragraph_small{
-    font-size: var(--fs-normal);
+    font-size: var(--fs-small);
 }
 
 /* page styles */
@@ -136,7 +138,7 @@ body{
 .section{
     display: flex;
     justify-content: center;
-    padding: 0 var(--space-big);
+    padding: 0 var(--space-mid);
 }
 
 .section:not(:first-child){
@@ -144,7 +146,7 @@ body{
 }
 
 .section:not(:first-child) > div {
-    padding: 0 var(--space-bigger);
+    padding: 0 var(--space-small);
 }
 
 .section > div {
@@ -162,6 +164,14 @@ body{
 }
 
 @media all and (min-width: 800px){
+    .paragraph{
+        font-size: var(--fs-big);
+    }
+
+    .paragraph_small{
+        font-size: var(--fs-normal);
+    }
+
     .heading_mid{
         font-size: 40px;
     }
